tests/test_compile/cases/attribute_token_stream.rs
use deku::prelude::*;

#[derive(DekuRead)]
struct Test1 {
    #[deku(cond = "0 == true")]
    a: u8,
}

fn main() {}
